--- a/diaballik-frontend/src/index.html
+++ b/diaballik-frontend/src/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <title>DiabalikFrontend</title>
   <base href="/">
-
+  <link rel="stylesheet" type="text/css" href="src/css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body style="background-color:#008CBA;">
   <app-root></app-root>
 </body>
 </html>
