--- a/diaballik-frontend/src/index.html
+++ b/diaballik-frontend/src/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body style="background-color:#008CBA;">
+<body style="background-color:#0099CC;">
   <app-root></app-root>
 </body>
 </html>
